# proto/gen/api/v1/board_service_grpc.pb.go
@@ -1,0 +1,286 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.6.2
+// - protoc             (unknown)
+// source: api/v1/board_service.proto
+
+package apiv1
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+	emptypb "google.golang.org/protobuf/types/known/emptypb"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
+
+const (
+	BoardService_ListBoards_FullMethodName  = "/memos.api.v1.BoardService/ListBoards"
+	BoardService_GetBoard_FullMethodName    = "/memos.api.v1.BoardService/GetBoard"
+	BoardService_CreateBoard_FullMethodName = "/memos.api.v1.BoardService/CreateBoard"
+	BoardService_UpdateBoard_FullMethodName = "/memos.api.v1.BoardService/UpdateBoard"
+	BoardService_DeleteBoard_FullMethodName = "/memos.api.v1.BoardService/DeleteBoard"
+)
+
+// BoardServiceClient is the client API for BoardService service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+type BoardServiceClient interface {
+	// ListBoards returns a user's kanban boards.
+	ListBoards(ctx context.Context, in *ListBoardsRequest, opts ...grpc.CallOption) (*ListBoardsResponse, error)
+	// GetBoard gets a board by name.
+	GetBoard(ctx context.Context, in *GetBoardRequest, opts ...grpc.CallOption) (*Board, error)
+	// CreateBoard creates a new board for a user.
+	CreateBoard(ctx context.Context, in *CreateBoardRequest, opts ...grpc.CallOption) (*Board, error)
+	// UpdateBoard updates a board for a user.
+	UpdateBoard(ctx context.Context, in *UpdateBoardRequest, opts ...grpc.CallOption) (*Board, error)
+	// DeleteBoard deletes a board for a user. Memos on the board have their
+	// kanban state cleared.
+	DeleteBoard(ctx context.Context, in *DeleteBoardRequest, opts ...grpc.CallOption) (*emptypb.Empty, error)
+}
+
+type boardServiceClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewBoardServiceClient(cc grpc.ClientConnInterface) BoardServiceClient {
+	return &boardServiceClient{cc}
+}
+
+func (c *boardServiceClient) ListBoards(ctx context.Context, in *ListBoardsRequest, opts ...grpc.CallOption) (*ListBoardsResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(ListBoardsResponse)
+	err := c.cc.Invoke(ctx, BoardService_ListBoards_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *boardServiceClient) GetBoard(ctx context.Context, in *GetBoardRequest, opts ...grpc.CallOption) (*Board, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(Board)
+	err := c.cc.Invoke(ctx, BoardService_GetBoard_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *boardServiceClient) CreateBoard(ctx context.Context, in *CreateBoardRequest, opts ...grpc.CallOption) (*Board, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(Board)
+	err := c.cc.Invoke(ctx, BoardService_CreateBoard_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *boardServiceClient) UpdateBoard(ctx context.Context, in *UpdateBoardRequest, opts ...grpc.CallOption) (*Board, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(Board)
+	err := c.cc.Invoke(ctx, BoardService_UpdateBoard_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *boardServiceClient) DeleteBoard(ctx context.Context, in *DeleteBoardRequest, opts ...grpc.CallOption) (*emptypb.Empty, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(emptypb.Empty)
+	err := c.cc.Invoke(ctx, BoardService_DeleteBoard_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// BoardServiceServer is the server API for BoardService service.
+// All implementations must embed UnimplementedBoardServiceServer
+// for forward compatibility.
+type BoardServiceServer interface {
+	// ListBoards returns a user's kanban boards.
+	ListBoards(context.Context, *ListBoardsRequest) (*ListBoardsResponse, error)
+	// GetBoard gets a board by name.
+	GetBoard(context.Context, *GetBoardRequest) (*Board, error)
+	// CreateBoard creates a new board for a user.
+	CreateBoard(context.Context, *CreateBoardRequest) (*Board, error)
+	// UpdateBoard updates a board for a user.
+	UpdateBoard(context.Context, *UpdateBoardRequest) (*Board, error)
+	// DeleteBoard deletes a board for a user. Memos on the board have their
+	// kanban state cleared.
+	DeleteBoard(context.Context, *DeleteBoardRequest) (*emptypb.Empty, error)
+	mustEmbedUnimplementedBoardServiceServer()
+}
+
+// UnimplementedBoardServiceServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedBoardServiceServer struct{}
+
+func (UnimplementedBoardServiceServer) ListBoards(context.Context, *ListBoardsRequest) (*ListBoardsResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method ListBoards not implemented")
+}
+func (UnimplementedBoardServiceServer) GetBoard(context.Context, *GetBoardRequest) (*Board, error) {
+	return nil, status.Error(codes.Unimplemented, "method GetBoard not implemented")
+}
+func (UnimplementedBoardServiceServer) CreateBoard(context.Context, *CreateBoardRequest) (*Board, error) {
+	return nil, status.Error(codes.Unimplemented, "method CreateBoard not implemented")
+}
+func (UnimplementedBoardServiceServer) UpdateBoard(context.Context, *UpdateBoardRequest) (*Board, error) {
+	return nil, status.Error(codes.Unimplemented, "method UpdateBoard not implemented")
+}
+func (UnimplementedBoardServiceServer) DeleteBoard(context.Context, *DeleteBoardRequest) (*emptypb.Empty, error) {
+	return nil, status.Error(codes.Unimplemented, "method DeleteBoard not implemented")
+}
+func (UnimplementedBoardServiceServer) mustEmbedUnimplementedBoardServiceServer() {}
+func (UnimplementedBoardServiceServer) testEmbeddedByValue()                      {}
+
+// UnsafeBoardServiceServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to BoardServiceServer will
+// result in compilation errors.
+type UnsafeBoardServiceServer interface {
+	mustEmbedUnimplementedBoardServiceServer()
+}
+
+func RegisterBoardServiceServer(s grpc.ServiceRegistrar, srv BoardServiceServer) {
+	// If the following call panics, it indicates UnimplementedBoardServiceServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&BoardService_ServiceDesc, srv)
+}
+
+func _BoardService_ListBoards_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ListBoardsRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(BoardServiceServer).ListBoards(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: BoardService_ListBoards_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(BoardServiceServer).ListBoards(ctx, req.(*ListBoardsRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _BoardService_GetBoard_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetBoardRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(BoardServiceServer).GetBoard(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: BoardService_GetBoard_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(BoardServiceServer).GetBoard(ctx, req.(*GetBoardRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _BoardService_CreateBoard_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(CreateBoardRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(BoardServiceServer).CreateBoard(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: BoardService_CreateBoard_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(BoardServiceServer).CreateBoard(ctx, req.(*CreateBoardRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _BoardService_UpdateBoard_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(UpdateBoardRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(BoardServiceServer).UpdateBoard(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: BoardService_UpdateBoard_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(BoardServiceServer).UpdateBoard(ctx, req.(*UpdateBoardRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _BoardService_DeleteBoard_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(DeleteBoardRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(BoardServiceServer).DeleteBoard(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: BoardService_DeleteBoard_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(BoardServiceServer).DeleteBoard(ctx, req.(*DeleteBoardRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// BoardService_ServiceDesc is the grpc.ServiceDesc for BoardService service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var BoardService_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "memos.api.v1.BoardService",
+	HandlerType: (*BoardServiceServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "ListBoards",
+			Handler:    _BoardService_ListBoards_Handler,
+		},
+		{
+			MethodName: "GetBoard",
+			Handler:    _BoardService_GetBoard_Handler,
+		},
+		{
+			MethodName: "CreateBoard",
+			Handler:    _BoardService_CreateBoard_Handler,
+		},
+		{
+			MethodName: "UpdateBoard",
+			Handler:    _BoardService_UpdateBoard_Handler,
+		},
+		{
+			MethodName: "DeleteBoard",
+			Handler:    _BoardService_DeleteBoard_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "api/v1/board_service.proto",
+}
